# imageanalyzer

./: .replit  Pasted-ERROR-in-app-Exception-on-register-POST-Traceback-most-recent-call-last-File-home-runner--1726826870539.txt  Pasted-ERROR-main-Exception-on-upload-POST-Traceback-most-recent-call-last-File-home-runner-works-1726828454257.txt  Pasted-ERROR-main-Exception-on-upload-POST-Traceback-most-recent-call-last-File-home-runner-works-1726828934824.txt  Pasted-INFO-alembic-runtime-migration-Running-upgrade-eec5331a1c96-2f7ffe9d7094-Add-image-data-colum-1726828548364.txt  config.py  main.py  pyproject.toml
instance/: site.db
migrations/versions/: 1da145b6f746_update_analysis_model_with_uuid_id.py  2f7ffe9d7094_add_image_data_column_to_analysis_table.py  eec5331a1c96_increase_password_hash_column_size.py
static/css/: styles.css
static/js/: app.js
templates/: base.html  history.html  index.html  login.html  register.html
